--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 
 #testing {
 	color: #FFF;
-	margin-top: -20px;
+	margin-top: -20px;im
 	background: rgb(0, 0, 0); /* Fall-back for browsers that don't
                                     support rgba */
     background: rgba(0, 0, 0, .5);
@@ -30,6 +30,10 @@ body {
 	margin-left: 5px;
 }
 
+.searchBox {
+	color: black;
+}
+
 .game1 {
 	margin-top: 155px;
 	background-color: #000;
@@ -37,4 +41,8 @@ body {
 
 
 
+}
+
+#hidden {
+	visibility: hidden;
 }
