--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,9 @@ body {
 .searchBox {
 	color: black;
 }
+.gameTop {
+	margin-top: 100px;
+}
 
 .game1 {
 	margin-top: 155px;
@@ -42,7 +45,11 @@ body {
 
 
 }
-
-#hidden {
+.makeHide {
 	visibility: hidden;
+}
+
+
+img {
+	float: left;
 }
